--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.4.0",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.9.1",
     "dompurify": "^3.1.4",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "sass": "^1.77.2"
   }
 }
