feat(backend): 🔧 Update tailwind config file. Update pathing.
Forced color properties on tailwind, certain colors may be disabled.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
       ],
       "@scripts/*": [
         "src/scripts/*"
-      ]
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
     }
   }
 }
