--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^4.9.1",
     "dompurify": "^3.1.5",
     "form-data": "^4.0.0",
+    "js-cache": "^1.0.3",
     "react-svg": "^16.1.34",
     "tailwindcss": "^3.4.3"
   },
