--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^3.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/dompurify": "^3.0.5",
     "astro": "^4.9.1",
     "dompurify": "^3.1.5",
     "form-data": "^4.0.0",
