--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@types/dompurify": "^3.0.5",
+    "ansi-align": "^3.0.1",
     "astro": "^4.12.2",
     "dompurify": "^3.1.6",
     "form-data": "^4.0.0",
@@ -24,5 +25,9 @@
   },
   "devDependencies": {
     "sass": "^1.77.8"
+  },
+  "resolutions": {
+    "wrap-ansi": "7.0.0",
+    "string-width": "4.1.0"
   }
 }
