--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
-    "string-width": "4.1.0"
+    "string-width": "4.1.0",
+    "strip-ansi": "6.0.0"
   }
 }
