--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
+    "test_prod": "astro check && astro build && astro preview",
     "astro": "astro",
     "html_test": "bun run src/scripts/htmlformatter.js"
   },
   "dependencies": {
+    "@astrojs/check": "^0.8.3",
     "@astrojs/cloudflare": "^11.0.1",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
@@ -22,14 +24,20 @@
     "form-data": "^4.0.0",
     "js-cache": "^1.0.3",
     "react-svg": "^16.1.34",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "sass": "^1.77.8"
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
     "string-width": "4.1.0",
     "strip-ansi": "6.0.0"
+  },
+  "module": "index.ts",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
