--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "form-data": "^4.0.0",
     "js-cache": "^1.0.3",
     "react-svg": "^16.1.34",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "wrangler": "^3.67.1"
   },
   "devDependencies": {
     "git-format-staged": "^3.1.1",
