--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@astrojs/check": "^0.8.3",
     "@astrojs/cloudflare": "^11.0.1",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
@@ -24,6 +25,7 @@
     "js-cache": "^1.0.3",
     "react-svg": "^16.1.34",
     "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.4",
     "wrangler": "^3.67.1"
   },
   "devDependencies": {
