--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "js-cache": "^1.0.3",
     "react-svg": "^16.1.34",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.4",
-    "wrangler": "^3.67.1"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "git-format-staged": "^3.1.1",
