--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
+  "tabWidth": 2,
   "useTabs": true,
   "arrowParens": "always",
-  "experimentalTernaries": true,
-  "indent_size": 2
+  "experimentalTernaries": true
 }
