--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@eslint/js": "^9.8.0",
     "@types/dompurify": "^3.0.5",
     "ansi-align": "^3.0.1",
     "astro": "^4.12.2",
     "dompurify": "^3.1.6",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
     "form-data": "^4.0.0",
     "js-cache": "^1.0.3",
     "react-svg": "^16.1.34",
@@ -30,7 +33,8 @@
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "prettier": "3.3.3",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "@types/bun": "latest"
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
@@ -39,5 +43,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
